<resources>
    <string name="app_name">Biblioteca</string>
    <string name="texto_app">Bem-vindo!</string>
    <string name="descricao_app">Gerencie seu aluguel de livros e revistas com facilidade usando o menu abaixo</string>
    <string name="pesquisar_bd">Pesquisar</string>
    <string name="registrar_bd">Registrar</string>
    <string name="atualizar_bd">Atualizar</string>
    <string name="remover_bd">Remover</string>
    <string name="listar_bd">Listar</string>
    <string name="rotulo_identificacao_exemplar">Identificação:</string>
    <string name="id_exemplar">001</string>
    <string name="rotulo_nome_exemplar">Nome:</string>
    <string name="nome_exemplar">Vidas Secas</string>
    <string name="rotulo_paginas_exemplar">Páginas:</string>
    <string name="paginas_exemplar">070</string>
    <string name="rotulo_livro">Livro</string>
    <string name="rotulo_isbn_livro">ISBN:</string>
    <string name="isbn_livro">A1</string>
    <string name="rotulo_edicao_livro">Edição:</string>
    <string name="edicao_livro">5</string>
    <string name="rotulo_revista">Revista</string>
    <string name="rotulo_issn_revista">ISSN:</string>
    <string name="issn_revista">B1</string>
    <string name="rotulo_aluguel">Aluguel</string>
    <string name="rotulo_aluno_aluguel">Aluno:</string>
    <string name="rotulo_exemplar_aluguel">Exemplar:</string>
    <string name="rotulo_retirada_aluguel">Retirada:</string>
    <string name="data_retirada_aluguel">2024–12–01</string>
    <string name="rotulo_devolucao_aluguel">Devolução:</string>
    <string name="data_devolucao_aluguel">2024–12–10</string>
    <string name="rotulo_aluno">Aluno</string>
    <string name="rotulo_identificacao_aluno">Identificação:</string>
    <string name="id_aluno">001</string>
    <string name="rotulo_nome_aluno">Nome:</string>
    <string name="nome_aluno">Ana Silva</string>
    <string name="rotulo_email_aluno">E-mail:</string>
    <string name="email_aluno">anasilva@mail.com</string>
</resources>
