<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutRevista"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment_revista">

    <TextView
        android:id="@+id/textViewRevistaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/rotulo_revista"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRevistaIdRotulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rotulo_identificacao_exemplar"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextRevistaId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRevistaTitulo" />

    <EditText
        android:id="@+id/editTextRevistaId"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_exemplar"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewRevistaIdRotulo"
        app:layout_constraintTop_toTopOf="@+id/textViewRevistaIdRotulo" />

    <Button
        android:id="@+id/buttonPesquisarRevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pesquisar_bd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRevistaId" />

    <TextView
        android:id="@+id/textViewRevistaResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/descricao_app"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPesquisarRevista" />

</androidx.constraintlayout.widget.ConstraintLayout>
