<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutAluno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment_aluno">

    <TextView
        android:id="@+id/textViewAlunoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/rotulo_aluno"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAlunoIdRotulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rotulo_identificacao_aluno"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextAlunoId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlunoTitulo" />

    <EditText
        android:id="@+id/editTextAlunoId"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_aluno"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAlunoIdRotulo"
        app:layout_constraintTop_toTopOf="@+id/textViewAlunoIdRotulo" />

    <Button
        android:id="@+id/buttonPesquisarAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pesquisar_bd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlunoId" />

    <TextView
        android:id="@+id/textViewAlunoResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Resultados serão exibidos aqui"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPesquisarAluno" />

</androidx.constraintlayout.widget.ConstraintLayout>
